1.2 hardening from second-round review
Independent agent reviewers caught five real issues in commit e8aad8d. This
commit fixes all five, adds two defense-in-depth measures from prior review
items marked "defer", and documents the migration story. No public API
breaks beyond the contract changes already in 1.2.

Test bugs fixed

- concurrentUpdatesOnDifferentKeysBothSurvive previously asserted only that
  the values START WITH "alice-" / "berlin-" — under the OLD non-atomic
  read-modify-write impl, threads typically converge to a final state that
  contains both keys (just with stale values), so the test would have
  passed against the broken code. Strengthened to assertEquals on the
  exact last-written value ("alice-24", "berlin-24"); the OLD impl would
  frequently lose intermediate writes and fail this stricter check.
- systemPromptRefreshPreservesCompactorSummary was a fake regression test:
  with messages.size()==3 the ContextCompactor short-circuits without ever
  running compaction. Replaced with a Model that has a small contextWindow
  (80 tokens), 8 large messages forcing the 90% threshold, and a stub
  summary path that returns deterministic content. Now actually exercises
  autoCompact and verifies the summary at messages[1] survives the
  per-iteration system-prompt refresh, with the refreshed prompt at
  messages[0] reflecting current memory.

Provider guards

- OpenAIModel/GeminiModel/AnthropicModel.chat(messages, tools, schema) now
  throw UnsupportedOperationException when outputSchema.innerOutputType is
  non-null. The deferred typed-Agent.run-with-Provenanced path was
  silently misbehaving: Jackson would deserialize {output, provenance}
  into a raw Provenanced whose .output is a LinkedHashMap, not the user's
  record. The guard fails fast with a pointer to the supported RLM/
  SubmitFunction route.

Self-poisoning persistent memory defense

- Memory.renderCoreMemory now wraps each block in
  <core-memory-block name="...">…</core-memory-block> X